src/App.scss
// Fonts
@import url('https://fonts.googleapis.com/css2?family=Asap:wght@400;500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
@import './styles/Mixin.scss';

// 
// Reusable Themes 
// 
// Universal Settings 
* {
    margin: 0;
    padding: 0;
    font-family:'Asap', sans-serif;
}
::-webkit-scrollbar {
    height: 10px;             
    width: 10px;
    border-radius: 1em;             
  }
  ::-webkit-scrollbar-thumb {
    background: rgba(0,0,0,1);
    border-radius: 10px;
}     

html{
    position: relative;
    min-height: 100%;
    max-height: auto;
}
// 
// Header.js 
nav {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    padding: 1em;
    .links-cont {
    list-style-type: none;
        li {
            display: inline-block;
            margin: 1em;
            font-weight: 500;
            font-size: 1.2rem;
            
        }
        
       
        
    }   
    .link {
        text-decoration: none;
        color: black;
            &:hover {
                color: $base-purple;
            }
    }
    .logo-name {
        font-family: 'Archivo Black', sans-serif;
        letter-spacing: 5px;
        padding: 0.2em;
        font-size: 2rem;
        border-radius: 5px;
        box-shadow: $basic-boxshadow;
        text-decoration: none;
        color: white;
        background: black;
        transition: 0.1s ease-in;
        &:hover {
            color: $base-purple;
        }
    }

    input {
        @include searchbar;
        background: url(img/search-thin.svg) no-repeat scroll 7px 10px $base-purple;
        border: none;
        padding-left: 30px;
        border: black 2px solid;
        &::placeholder {
            color: black;
        }

        &:focus {
            box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.5);
        }
    }
    

    .user-sl {
        position: relative;
        display: flex;
        .user-pfp {
            margin-left: 1em;
        }
        .user-option-lists {
            position: absolute;
            list-style-type: none;
            right: 0;
            z-index: 1;
            margin-top: 2.5em;
            @include purple-box();
            li {
                margin: 20px;
            }
        }
        .log_out_btn {
            background: none;
            border: none;
        }

        .login-btn {
            @include searchbar;
            margin-left: 1em;
            text-decoration: none;
            color: white;
            background-color: black;
            border: none;
            width: fit-content;
            transition: 0.2s ease-in;
            &:hover {
                transform: translate(-5px, -5px);
                box-shadow: 5px 5px 0 -3px white, 5px 5px $base-purple,
            }
        }
    }
}



.user-pfp {
    width: 35px;
    height: 35px;
}


// 
// Login.js 
.user-form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 4rem 1rem 4rem 1rem;
    gap: 1em;
    div {
        label {
            display: block;
            @include section-title;
            margin-bottom: 0.8em;
            &::after{
                @include purple-underline;
                width: 10%;
            }
        }

        input {
            padding: 1em;
            width: 35ch;
            border: 3px solid black;
            border-radius: 3px;
        }
    }
    .submit-btn {
        @include searchbar;
        text-align: center;
        color: white;
        background-color: $base-purple;
        width: 40ch;
        margin-top: 1em;
        span {
            font-size: 1rem;
        }
        &:hover {
            box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.5);
            cursor: pointer;
        }
    }
    .sign-up-sect {
        border-bottom: 1px solid gray;
        width: 35ch;
        text-align: center;
        div {
            margin-bottom: 1em;
            font-size: 0.8rem;
        }
    }
    .demo-account {
        button {
            @include searchbar;
            width: 20ch;
            padding: 0.5em;
            margin: 0.7em;
            display: inline-block;
            background: black;
            color: white;
            transition: 0.2s ease-in;
            cursor: pointer;
            &:hover {
                transform: translate(-5px, -5px);
                box-shadow: 5px 5px 0 -3px white, 5px 5px $base-purple,
            }
        }
    }
}



// 
// Home.js 
.home-cont {
    position: relative;
    .intro-cont {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 2.5em;
        position: relative;
        padding: 5rem;
        .home-title {
        text-align: center;
        font-family: 'Archivo Black', sans-serif;
        font-size: 5rem;
        span {font-family: 'Archivo Black', sans-serif;}
        } 
        button {
            padding: 0.8rem;
            width: 40ch;
            @include purple-box();
            border-radius: 2rem;
        }
        .decor-img, .decor-img2 {
        position: absolute;
        z-index: 1;
        }   
        .decor-img {
        right: 7%;
        top: 5%;
        animation: mover 2s infinite alternate;
        }
        .decor-img2 {
        left: 10%;
        top: 50%;
        }
    }

    .toggle-container {
        margin: 0rem 5rem 5rem 5rem;
        border-radius: 1em;
        background: rgba(0, 0, 0, 0.95);
        padding: 1em;
        color: white;

        box-shadow: $basic-boxshadow;
        .toggle-btn {
        float: right;
        }
        .toggle-btn {
            button {
                background: none;
                border: 1px solid white;
                border-radius: 50%;
                padding: 3px;
                margin: 5px;
                transition: 0.5s ease-in;
                &:hover {
                    background: #695ef5;
                }
            }
        }

    .discover-cont {
            h2 {
                color: #8e53bd;
            }
            .discover-img-cont {
                overflow: hidden;
                display: flex;
                img {
                    margin: 1em;
                    border-radius: 1em;
                }

            }
        }
    }
}


// 
// Games.js 
.games-cont {
        .cont-direct {
            background: black;
            width: fit-content;
            padding: 0.7em;
            width: 20ch;
            margin: 1em;
            border-radius: 1rem;
            display: flex;
            justify-content: space-between;
            box-shadow: $basic-boxshadow;
            font-weight: 500;
            color: white;
            transition: 0.2s ease-in;
            &:hover {
                background: #695ef5;
            }
        }
}


// 
// Signup.js




// 
// Picture.js
.picture-cont {
    @include flex-box()
    
}

.indv-pic-cont {
        position: relative;
        width: fit-content;
        height: fit-content;
            img {
                border-radius: 5px;
                box-shadow: $basic-boxshadow; 
                vertical-align: bottom;
            }
            .img-overlay {
                position: absolute;
                width: 100%;
                height: 100%;
                background: rgba(0, 0, 0, 0.5);
                top: 0;
                z-index: 1;
                opacity: 0;
                border-radius: 5px;
            }
            p {
            position: absolute;
            z-index: 2;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
            color: white;
            text-align: center;
            opacity: 0;
            font-weight: 500;
            transition: 0.5s ease;
            text-overflow: ellipsis;
            }
            &:hover {
                p, .img-overlay {
                    opacity: 1;
                    
                }
            }
       }


// 
// Search.js 
.search-cont {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    place-items: center;
    justify-content: center;
    gap: 1em;
}


// 
// GameLog.js
.modal-tab {
    padding: 1rem;
    position: relative;
    border-radius: 5px;
    border: none;
    .mini-title {
        font-size: 1.5rem;
    }
    .fav-btn {
            padding: 0.5em 2em 0.5em 2em;
            background: #D83E4F;
            color: #f3f3f3;
            border-radius: 0.5em;
            border: 2px solid black;
            display: inline-block;
        }
    form {
        display: flex;
        gap: 2em;
        button {
            display: block;
            padding: 0.5em;
        }
        select {
            display: block;
            padding: 0.5em 2em 0.5em 5px;
            margin-bottom: 1em;
            border-radius: 0.5em;
        }

        img {
            margin-top: 1em;
            border-radius: 0.5em;
            box-shadow: $basic-boxshadow;
        }
        div {
            margin-top: 1em;
        }
    }
    .close-btn {
            position: absolute;
            top: 5px;
            right: 5px;
            background: none;
            border: none;
        }
    .two-btn {
        margin-top: 1em;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }
}

// 
// Warning.js 
.empty-page {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1em;
    height: 100vh;
    background: url(img/mhk_21.jpg);

    h1, h2 {
        font-family: 'Archivo Black', sans-serif;
    }

    h1 {
        font-size: 10rem;
        text-shadow: #8e53bd 1px 0px 10px;
    }
    h2 {
        font-size: 2rem;
        color: rgba(0, 0, 0, 0.85);
    }
    p {
        max-width: 50ch;
        text-align: center;
    }
    button {
        @include searchbar;
        background-color: $base-purple;
        &:hover {
            box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.5);
        }
        a {
            text-decoration: none;
            color: black;
        }
    }
}

footer {
    overflow: hidden;
    background: black;
    position:absolute;
    display: inline-block;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 1em;
}
// Animations
@keyframes mover {
            0% { transform: translateY(0); }
            100% { transform: translateY(-20px); }
        }

